# Cpp-Database-Manager

./: CMakeLists.txt
include/: IDatabaseBackend.h  MainWindow.h  SQLiteBackend.h
src/: MainWindow.cpp  SQLiteBackend.cpp  main.cpp  resources.qrc
